# SocraticSeminar

./: .gitignore  .gitmodules  CodingAgents.md  README.md  SocraticSeminar.md  mkdocs.yml
agents/: .env.example  langgraph.json  pyproject.toml
agents/src/: __init__.py
agents/src/agent/: __init__.py  graph.py  nodes.py
agents/src/seminar/: state.py
backend/: .env.example  README.md  pyproject.toml
backend/src/: __init__.py  main.py  wallet.py
docs/: CodingAgents.md  SocraticSeminar.md  agent.md  index.md
docs/agents/Perplexica/: agent.md
docs/architecture/: agents.md  backend.md  frontend.md  overview.md
frontend/: .env.example  .gitignore  components.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: index.ts
frontend/src/lib/components/: AgentPicker.svelte  ArtifactPanel.svelte  FileExplorer.svelte  Navbar.svelte  PaymentGate.svelte  ProjectDashboard.svelte  ProjectSidebar.svelte  TabbedEditor.svelte  ThreadPanel.svelte  WorkspaceLayout.svelte  index.ts
frontend/src/lib/components/ui/: button.svelte  index.ts  input.svelte  textarea.svelte
frontend/src/lib/services/: indexeddb.ts
frontend/src/lib/stores/: agent.svelte.ts  artifacts.svelte.ts  assistants.svelte.ts  index.ts  projects.svelte.ts  threads.svelte.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
